--- a/public/css/geral.css
+++ b/public/css/geral.css
@@ -1,4 +1,15 @@
 #conteudo {
     overflow: hidden
-    
 }
+/* Select2 */
+.select2-container--default .select2-selection--single {
+    background-color: #fff;
+    border-color: #ced4da;
+    color: #495057;
+    height: calc(2.25rem + 2px);
+}
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 38px;
+    color: #000;
+}
+
